--- a/project/build.gradle
+++ b/project/build.gradle
@@ -14,6 +14,8 @@ repositories {
 
 dependencies {
     implementation group: 'com.typesafe.akka', name: 'akka-actor_2.13', version: '2.6.3'
+    compile group: 'com.typesafe.akka', name: "akka-slf4j_2.13", version: '2.6.6'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
